2016-07-11  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/stm32f103.h: Add more from Gnuk 1.1.9.
	* example-cdc, example-fs-bb48, example-fsm-55, example-led:
	Update for stack addr/size.

2016-07-01  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.
	* doc/chopstx.texi (VERSION): 1.1.

	* chopstx.c (chopstx_setpriority): Change the API.

2016-06-30  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc/usb-cdc.c (tty_recv, tty_main): Follow the change of
	chopstx_poll.

2016-06-29  NIIBE Yutaka  <gniibe@fsij.org>

	* example-fs-bb48: Update.
	* example-fs-bb48/touch.c: New.

	* chopstx.c (chopstx_setpriority): Fix sched_lock/unlock.

2016-06-28  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.h (struct chx_poll_head): Declare here.

	* chopstx.c (chopstx_poll): Don't use varargs, but use
	an array of pointer.
	(chopstx_intr_wait): Follow the change of chopstx_poll.
	* eventflag.c (eventflag_wait_timeout): Likewise.
	* contrib/adc-stm32f103.c (adc_wait_completion): Likewise.
	* contrib/adc-mkl27z.c (adc_wait_completion): Likewise.

2016-06-16  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.
	* doc/chopstx.texi (VERSION): 1.0.

	* board/board-fst-01g.h: New.

2016-06-15  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_exit): Add "naked" attribute.

2016-06-14  Niibe Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_ctrl_recv): Fix the state and make
	the endpoint 0 RX_VALID.

2016-06-10  NIIBE Yutaka  <gniibe@fsij.org>

	* usb_lld.h (USB_EVENT_OK): Rename.
	* mcu/usb-stm32f103.c: Update.
	* mcu/usb-mkl27z.c: Likewise.

	* example-cdc/usb-cdc.c: Follow the change of API.
	* example-fs-bb48/usb-cdc.c: Likewise.

2016-06-09  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_ctrl_recv): Rename.
	(usb_lld_ctrl_send): Rename.
	(usb_lld_ctrl_ack): Rename and let have return value.
	* mcu/usb-mkl27z.c: Likewise.

	* example-cdc/usb-cdc.c: Follow the change of API.
	* example-fs-bb48/usb-cdc.c: Likewise.

2016-06-08  NIIBE Yutaka  <gniibe@fsij.org>
